--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <title>Simple Phaser Game</title>
     <script src="node_modules/phaser/dist/phaser.min.js"></script>
     <script src="game.js"></script>
+
+    <style>
+        body {
+            margin: 0;
+        }
+    </style>
 </head>
 <body>
 </body>
