--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Simple Phaser Game</title>
-    <script src="node_modules/phaser/dist/phaser.min.js"></script>
-    <script src="game.js"></script>
+    <!-- <script src="node_modules/phaser/dist/phaser.min.js"></script> -->
 
     <style>
-        body {
-            margin: 0;
-        }
+      body {
+        margin: 0;
+      }
     </style>
-</head>
-<body>
-</body>
+  </head>
+  <body>
+    <script src="game.js" type="module"></script>
+  </body>
 </html>
